[gd_scene load_steps=6 format=3 uid="uid://b11bimyww6u84"]

[ext_resource type="SpriteFrames" uid="uid://bxvllgnxd0fig" path="res://resources/spriteFrames/sunflower_std_anim.tres" id="2_fkhg1"]
[ext_resource type="Script" uid="uid://i43wqanmcup6" path="res://scenes/sunflower/sunflower.gd" id="113"]
[ext_resource type="Animation" uid="uid://x3tlc3a0iu6x" path="res://animations/popup.tres" id="114"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yinmg"]
_data = {
&"popup": ExtResource("114")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yinmg"]
size = Vector2(70.000015, 79.99999)

[node name="sunflower" type="Node2D"]
scale = Vector2(0.1, 0.1)
script = ExtResource("113")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -109)
sprite_frames = ExtResource("2_fkhg1")
animation = &"sun"
autoplay = "std"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yinmg")
}

[node name="sunTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="sungen" type="Node2D" parent="."]
visible = false
position = Vector2(4.285714, -107.14285)

[node name="eatCollision" type="Area2D" parent="." groups=["plantcol"]]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="eatCollision"]
position = Vector2(-4.9999976, -29.999973)
scale = Vector2(0.99999964, 0.99999964)
shape = SubResource("RectangleShape2D_yinmg")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="sunTimer" to="." method="_on_sun_timer_timeout"]
